# nanolang

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: README.md  lib.rs
src/flat/: Cargo.toml
src/flat/src/: decode.rs  encode.rs  filler.rs  lib.rs  zigzag.rs
src/flat/src/decode/: decoder.rs  error.rs  errors.rs
src/flat/src/encode/: encoder.rs  errors.rs
src/nano-lang/: Cargo.toml
src/nano-lang/src/: ast.rs  builtins.rs  expr.rs  format.rs  gen_uplc.rs  levenshtein.rs  lib.rs  parser.rs  pretty.rs  tipo.rs
src/nano-lang/src/gen_uplc/: air.rs  builder.rs  scope.rs  stack.rs
src/nano-lang/src/parser/: error.rs  extra.rs  lexer.rs  token.rs
src/nano-lang/src/tipo/: env.rs  error.rs  expr.rs  fields.rs  hydrator.rs  infer.rs  pattern.rs  pipe.rs  pretty.rs
src/nano-project/: Cargo.toml
src/nano-project/src/: deps.rs  options.rs  package_name.rs
src/untyped-plutus-core/: Cargo.toml
src/untyped-plutus-core/src/: ast.rs  flat.rs  lib.rs  machine.rs  optimize.rs  parser.rs  pretty.rs  tx.rs
src/untyped-plutus-core/src/debruijn/: bimap.rs
src/untyped-plutus-core/src/machine/: cost_model.rs  discharge.rs  error.rs  runtime.rs
src/untyped-plutus-core/src/optimize/: shrinker.rs
src/untyped-plutus-core/src/parser/: interner.rs
src/untyped-plutus-core/src/tx/: eval.rs
src/untyped_plutus_core/: Cargo.toml
src/untyped_plutus_core/src/: builder.rs  builtins.rs  debruijn.rs  machine.rs  optimize.rs  parser.rs
src/untyped_plutus_core/src/machine/: eval_result.rs  value.rs
src/untyped_plutus_core/src/tx/: error.rs  phase_one.rs  script_context.rs  to_plutus_data.rs
update/: README.md
