[package]
name = "nano-lang"
version = "0.1.0"
edition = "2021"

[dependencies]
chumsky = "0.9.2"
hex = "0.4.3"
indexmap = "1.9.2"
indoc = "2.0.1"
itertools = "0.10.5"
miette = "5.5.0"
ordinal = "0.3.2"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
strum = "0.24.1"
thiserror = "1.0.39"
vec1 = "1.10.1"

untyped-plutus-core = { path = '../untyped-plutus-core', version = "0.1.0" }

[dev-dependencies]
indoc = "2.0.1"
pretty_assertions = "1.3.0"