[package]
name = "untyped-plutus-core"
version = "0.1.0"
edition = "2021"
description = "Untyped Plutus Core Lib"

[dependencies]
anyhow = "1.0.69"
cryptoxide = "0.4.4"
hex = "0.4.3"
indexmap = "1.9.2"
itertools = "0.10.5"
k256 = { version = "0.13.0", optional = true }
miette = "5.5.0"
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-traits = "0.2.15"
pallas-addresses = "0.18.0"
pallas-codec = "0.18.0"
pallas-crypto = "0.18.0"
pallas-primitives = "0.18.0"
pallas-traverse = "0.18.0"
peg = "0.8.1"
pretty = "0.11.3"
pretty_assertions = "1.3.0"
secp256k1 = "0.27.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.39"

flat = { path = "../flat", version = "0.1.0" }

[dev-dependencies]
hex = "0.4.3"
indoc = "2.0.1"
